# RaspberryLight

./: .gitignore  CMakeLists.txt  README.md
buildroot/board/orangepi5/rootfs-overlay/etc/: dhcpcd.conf  dnsmasq.conf
buildroot/board/orangepi5/rootfs-overlay/etc/apache2/: httpd.conf
buildroot/board/orangepi5/rootfs-overlay/etc/systemd/system/: limelight_cpupower.service  limelight_gadget.service  limelight_hwmon.service  limelight_networkresponder.service  limelight_picoflasherprocess.service  limelight_visionserver.service
configs/: 9.vpr  global.settings  setup_latest.json
docs/: hat-pinout.md
docs/superpowers/specs/: 2026-04-17-imu-fused-megatag-hat-plan.md  2026-04-17-imu-fused-megatag-hat.md
src/common/: config.cpp  field_map.cpp  pipeline_config.cpp  ws_crypto.cpp
src/common/include/: config.h  field_map.h  pipeline_config.h  ws_crypto.h
src/gadget/: main.cpp  usb_gadget.cpp  usb_gadget.h
src/hal/: hal_factory.cpp
src/hal/include/hal/: camera.h  gpio.h  imu.h  npu.h  status_leds.h  thermal.h  usb_gadget.h
src/hwmon/: endpoints.h  endpoints_disk.cpp  endpoints_kernel.cpp  endpoints_logs.cpp  endpoints_system.cpp  http_server.cpp  http_server.h  log_stream.cpp  main.cpp  monitor.cpp  monitor.h  util.cpp  util.h
src/networkresponder/: main.cpp  responder.cpp  responder.h
src/visionserver/: barcode_pipeline.cpp  calibration_pipeline.cpp  classifier_pipeline.cpp  color_pipeline.cpp  depth_pipeline.cpp  detector_pipeline.cpp  fiducial_pipeline.cpp  http_server.cpp  inference_engine.cpp  main.cpp  modbus_server.cpp  nt_publisher.cpp  pipeline.cpp  pipeline_manager.cpp  python_pipeline.cpp  python_runtime.cpp  rest_api.cpp  stream_server.cpp  viewfinder_pipeline.cpp  websocket_server.cpp
src/visionserver/include/visionserver/: barcode_pipeline.h  calibration_pipeline.h  classifier_pipeline.h  color_pipeline.h  depth_pipeline.h  detector_pipeline.h  fiducial_pipeline.h  http_server.h  modbus_server.h  nt_publisher.h  pipeline.h  pipeline_manager.h  python_pipeline.h  python_runtime.h  rest_api.h  stream_server.h  viewfinder_pipeline.h  websocket_server.h
web/: 1.vpr  asset-manifest.json  frcfieldbase.gltf  ftcfieldbase.gltf  index.html  ll3minimal.fbx  ll4minimal.fbx  sc.fbx  testfield.json
web/static/css/: main.5c00d589.css
web/static/js/: main.86291cd2.js  main.86291cd2.js.LICENSE.txt
